<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_green_blue"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/login_activity_email_edt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_login_text_background"
        android:hint="@string/e_mail_txt"
        android:paddingLeft="10dp"
        android:textColor="@color/colorGreenDark"
        android:textColorHint="@color/text_hint_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_title_txt"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/login_activity_pass_edt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/ic_login_text_background"
        android:hint="@string/sifre_txt"
        android:paddingLeft="10dp"
        android:textColor="@color/colorGreenDark"
        android:textColorHint="@color/text_hint_color"
        android:inputType="textPassword"
        android:maxLength="10"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_email_edt" />

    <Button
        android:id="@+id/login_activity_login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_login_button_background"
        android:text="@string/activity_login_giris_btn_txt"
        android:textColor="@color/colorBlueDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_activity_email_edt"
        app:layout_constraintStart_toStartOf="@+id/login_activity_email_edt"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_register_txt" />

    <TextView
        android:id="@+id/login_activity_title_txt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/ic_title_background"
        android:gravity="center"
        android:text="@string/activity_login_giris_yap_txt"
        android:textColor="@color/colorBlueDark"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/login_activity_register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/acitvity_login_kayit_ol_txt"
        android:padding="5dp"
        android:textSize="16sp"
        android:textColor="@color/colorBlueDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_activity_pass_edt"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_pass_edt" />
</android.support.constraint.ConstraintLayout>